pad bottom of biketotransit title to avoid mobile menu overlap

--- a/src/flavors/biketotransit/static/css/custom.css
+++ b/src/flavors/biketotransit/static/css/custom.css
@@ -32,6 +32,7 @@
 #site-title a:link,
 #site-title a:visited {
   margin-top: 0.5em;
+  margin-bottom: 7px;
   font-size: 0.4em;
   display: block;
   width: 8em;
